2006-05-12  Chris Toshok  <toshok@ximian.com>

	* XplatUIX11.cs (ScrollWindow): optimize copying.

2006-05-12  Chris Toshok  <toshok@ximian.com>

	* DataGridDrawingLogic.cs: make CalcGridAreas non-reentrant.
	Figure out the positioning/layout in a single pass instead of
	multiple recursive invocations.  Speeds up the initial display of
	the data grid.  Also, make many things private that were
	originally public but unused outside this class.

2006-05-11  Jackson Harper  <jackson@ximian.com>

	* MdiClient.cs: Improved layout code.

2006-05-11  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* PropertyGrid.cs : Only check GetPropertiesSupported for properties,
	  not SelectedObject.

2006-05-11  Chris Toshok  <toshok@ximian.com>

	* Hwnd.cs (Invalid): don't start off with Rectangle.Empty, as
	union of that will always be {0,0,width,height}.

2006-05-11  Jackson Harper  <jackson@ximian.com>

	* Form.cs: Match MS's DefaultSize for forms (they must have
	changed the size in sp2).

2006-05-11  Atsushi Enomoto  <atsushi@ximian.com>

	* TextBoxBase.cs : implement CTRL+A (select all). Fixed bug #78368.

2006-05-11  Atsushi Enomoto  <atsushi@ximian.com>

	* TextControl.cs : Fixed bug #78109. This incorrect position
	  comparison caused crash on automatic line split.
	* TextBoxBase.cs : reduce duplicate code.

2006-05-10  Jackson Harper  <jackson@ximian.com>

	* MdiClient.cs: Active form is only sent to the back when using
	the Next form functionality, when a form is clicked the current
	active shouldn't be sent to the back.
	- Layout the mdi windows when the container is first made visible.
	* Form.cs: Give the MdiClient a ref to the containing form when we
	create it.
	
2006-05-10  Atsushi Enomoto  <atsushi@ximian.com>

	* LinkLabel.cs : link_font could be uninitialized, so populate one
	  before actual use. Fixed bug #78340.

2006-05-10  Atsushi Enomoto  <atsushi@ximian.com>

	* XplatUIX11.cs : clipboard format native value is IntPtr.
	  Fixed bug #78283.
